--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
         font-style: normal;
     }
 
-    p {
+    p,span{
         font-family: "Montserrat", sans-serif;
         font-optical-sizing: auto;
         font-weight: 500;
@@ -552,5 +552,121 @@ header {
         margin-top: -30px;
         width: 3.5rem;
     }
+}
 
-}   
+
+footer {
+    background-color: black;
+    margin-top: 15rem;
+    height: 58vh;
+}
+
+.geral_footer {
+    /* margin-top: 8rem; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 5rem;
+    z-index: 2;
+    padding: 4rem;
+
+    p {
+        color: rgba(255, 255, 255, 0.75);
+        font-weight: bold;
+    }
+
+    a {
+        color: rgba(255, 255, 255, 0.75);
+        font-weight: bold;
+       font-family: "Poppins", sans-serif;
+
+        &:hover {
+            color: white;
+        }
+    }
+}
+
+
+.title-footer {
+    color: white;
+    opacity: 100%;
+    font-size: 18px;
+    margin-bottom: 1rem;
+}
+
+
+.logo_footer {
+    height: 150px;
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background: #303030;
+    border-radius: 50%;
+}
+
+.links_footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+
+    a {
+        color: rgba(255, 255, 255, 0.75);
+    }
+}
+
+.col2,
+.col3 {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.contato_footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 1.1rem;
+}
+
+.redes_footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+}
+
+
+.imgs-redes {
+    display: flex;
+    justify-content: flex-start;
+    gap: 22px;
+
+    img {
+        height: 34px;
+        cursor: pointer;
+    }
+}
+
+
+.horarios_footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 0.4rem;
+}
+
+.local_footer {
+    display: flex;
+    flex-direction: column;
+    width: 16rem;
+    gap: 0.9rem;
+}
+
+.cpy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(255, 255, 255, 0.9);
+    margin-bottom: 25px;
+}
