--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
         font-style: normal;
     }
 
-    p,span{
+    p,
+    span {
         font-family: "Montserrat", sans-serif;
         font-optical-sizing: auto;
         font-weight: 500;
@@ -47,6 +48,10 @@
 body {
     background: #000000e5;
     overflow-x: hidden;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 header {
@@ -93,11 +98,11 @@ header {
     display: flex;
     flex-direction: column;
     height: 116vh;
-    /* background: radial-gradient(circle at 30% 40%,
+    background: radial-gradient(circle at 50% 64%,
             #000000 0%,
-            #242424 20%,
-            #000000 100%); */
-    background: rgb(12, 12, 12);
+            #242424 5%,
+            #000000 80%);
+    /* background: rgb(12, 12, 12); */
 }
 
 .container-hero::after {
@@ -105,7 +110,7 @@ header {
     position: absolute;
     inset: 0;
     background: radial-gradient(circle at center,
-            rgba(255, 255, 255, 0.125),
+            /* rgba(255, 255, 255, 0.125), */
             transparent 60%);
     pointer-events: none;
 }
@@ -136,7 +141,7 @@ header {
         }
 
 
-        .btn-hero, .btn-simulador {
+        .btn-hero {
             background: hwb(0 17% 83%);
             border: none;
             border-bottom: 1px solid white;
@@ -327,7 +332,7 @@ header {
     gap: 1.2rem;
     margin-top: 4rem;
     width: max-content;
-  animation: rolagem 28s linear infinite;
+    animation: rolagem 28s linear infinite;
 
     p {
         font-size: 1.8rem;
@@ -337,22 +342,22 @@ header {
 }
 
 @keyframes rolagem {
-  0% {
-    transform: translateX(0);
-  }
+    0% {
+        transform: translateX(0);
+    }
 
-  100% {
-    transform: translateX(-50%);
-  }
+    100% {
+        transform: translateX(-50%);
+    }
 }
 
 
-.container-simulador{
+.container-simulador {
     margin-top: 8rem;
     display: flex;
     width: 100%;
-    background: url('/img/bg-simulador.png') no-repeat center black;
-    background-size: cover; 
+    background: url('/img/bg-simulador.png') no-repeat center rgba(0, 0, 0, 0.778);
+    background-size: cover;
     padding: 5rem;
     height: 100vh;
 
@@ -361,24 +366,25 @@ header {
 
 
 
-.main-contentSimulador{
+.main-contentSimulador {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
     /* margin-left: 4rem; */
-    .txt-sec{
+    .txt-sec {
         display: flex;
         flex-direction: column;
         gap: 1rem;
 
-        h1{
-            font-size:5.5rem;
+        h1 {
+            font-size: 5.5rem;
             width: 45rem;
             line-height: 5.3rem;
             letter-spacing: 3px;
         }
 
-        p{
+        p {
             font-size: 1rem;
             opacity: 80%;
             width: 33rem;
@@ -386,61 +392,61 @@ header {
     }
 
 
-     .btn-simulador {
-            background: hwb(0 17% 83%);
-            border: none;
-            border-bottom: 1px solid white;
-            /* padding: 1rem .4rem; */
-            padding: 1rem;
-            border-radius: .2rem;
-            font-size: 1rem;
-            transition: all .3s ease;
-            width: 14.5rem;
+    .btn-simulador {
+        background: hwb(0 17% 83%);
+        border: none;
+        border-bottom: 1px solid white;
+        /* padding: 1rem .4rem; */
+        padding: 1rem;
+        border-radius: .2rem;
+        font-size: 1rem;
+        transition: all .3s ease;
+        width: 14.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            background: #d9d9d9;
+
+            p {
+                color: black;
+            }
+
+            img {
+                rotate: 20deg;
+            }
+        }
+
+        .content-btn {
             display: flex;
             align-items: center;
-            justify-content: center;
+            gap: 1.5rem;
+            width: 100%;
 
-            &:hover {
-                background: #d9d9d9;
-
-                p {
-                    color: black;
-                }
-
-                img {
-                    rotate: 20deg;
-                }
+            img {
+                width: .95rem;
+                transition: all .3s ease;
             }
 
-            .content-btn {
-                display: flex;
-                align-items: center;
-                gap: 1.5rem;
-                width: 100%;
+            p {
+                font-weight: bold;
 
-                img {
-                    width: .95rem;
-                    transition: all .3s ease;
-                }
-
-                p {
-                    font-weight: bold;
-
-                }
             }
-
-
         }
+
+
+    }
 }
 
 
-.topicos-simulador{
+.topicos-simulador {
     display: flex;
     align-items: center;
     gap: 1rem;
     margin-bottom: 1.5rem;
 
-    .topic-item{
+    .topic-item {
         display: flex;
         flex-direction: column;
         gap: .8rem;
@@ -448,40 +454,40 @@ header {
         justify-content: center;
         /* padding: .rem; */
         width: 7.2rem;
-        height:7.2rem;
+        height: 7.2rem;
         background: #ffffff15;
         border-radius: .8rem;
 
-        p{
+        p {
             font-size: .85rem;
             opacity: 90%;
         }
     }
 }
 
-.mockup-laptop{
+.mockup-laptop {
     display: flex;
     flex-direction: column;
-    
 
-    .img-laptop{
+
+    .img-laptop {
         object-fit: cover;
         width: 36rem;
         z-index: 10;
         position: relative;
         left: 3.5rem;
-        top:8rem;
+        top: 8rem;
     }
 
-    .img-pilar{
+    .img-pilar {
         width: 43rem;
         height: 14.3rem
-        /* object-fit: contain; */
+            /* object-fit: contain; */
     }
 }
 
 
-.container-feedbacks{
+.container-feedbacks {
     margin-top: 6rem;
     display: flex;
     flex-direction: column;
@@ -504,8 +510,8 @@ header {
 }
 
 .swiper-slide {
-     width: 300px !important;
-    height: 330px !important;
+    width: 330px !important;
+    height: 340px !important;
 }
 
 .card-depoimento {
@@ -517,12 +523,15 @@ header {
     gap: 2rem;
     overflow: hidden;
 
+
     p {
         font-size: 1rem;
         font-weight: 500;
-        opacity: 85%;
-        width: 16rem;
+        opacity: 75%;
+        /* width: rem; */
+        line-height: 22px;
         margin-left: .8rem;
+        margin-top: 1.2rem;
     }
 }
 
@@ -534,13 +543,15 @@ header {
     /* margin-bottom: .5rem; */
 
     h1 {
-        font-size: 1.65rem;
-        -webkit-text-stroke: .3px #000;
+        font-family: "Poppins", sans-serif;
+        font-size: 1.2rem;
+        font-weight: bold;
         color: white;
-        margin-bottom: 2.4rem;
+
+        /* margin-bottom: 2.4rem; */
     }
 
-    .img-pessoa{
+    .img-pessoa {
         width: 3.5rem;
         height: 3.5rem;
         border: 2px solid black;
@@ -551,14 +562,133 @@ header {
     .aspas {
         margin-top: -30px;
         width: 3.5rem;
+        margin-left: .8rem;
     }
 }
 
 
+.container-faq {
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    justify-content: center;
+    align-items: center;
+
+
+    h1 {
+        font-size: 4.5rem;
+        letter-spacing: 3px;
+        width: 50rem;
+        text-align: center;
+        line-height: 93px;
+    }
+}
+
+.accordions-faq {
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordion {
+    width: 50rem;
+    background: #303030;
+    border-radius: .5rem;
+    box-shadow: rgba(190, 190, 190, 0.24) 0px 3px 8px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    cursor: pointer;
+    transition: all .4s ease;
+}
+
+.pergunta-accordion {
+    background: none;
+    border: none;
+    width: 100%;
+    height: 1.3rem;
+    margin-top: .7rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+
+
+    p {
+        font-size: 1.2rem;
+        font-weight: bolder;
+    }
+
+    span {
+        font-size: 1.8rem;
+        font-weight: bolder;
+    }
+}
+
+
+.resposta-accordion {
+    font-size: .95rem;
+    opacity: 80%;
+    max-height: 0;
+    opacity: 0;
+    transition: all .4s ease;
+    overflow: hidden;
+}
+
+.ativoResposta {
+    opacity: 1;
+    max-height: 10rem;
+}
+
+.ativoAccordion{
+    background: transparent;
+    border: 1.2px solid white;
+}
+
+.icon-open {
+    transition: transform .4s linear;
+}
+
+.accordion:has(.ativoResposta) .icon-open {
+    transform: rotate(47deg);
+}
+
+
+.seta-subir {
+    background: black;
+    padding: .8rem;
+    border-radius: .3rem .3rem 0 0;
+    width: 2.5rem;
+    height: 3.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10rem auto 0;
+    cursor: pointer;
+
+    &:hover {
+        img {
+            opacity: 100%;
+        }
+    }
+
+    img {
+        width: 1.3rem;
+        opacity: 40%;
+        transition: all .3s ease;
+
+    }
+}
+
 footer {
     background-color: black;
-    margin-top: 15rem;
+    /* margin-top: 15rem; */
     height: 58vh;
+    border-radius: 3rem 3rem 0 0;
 }
 
 .geral_footer {
@@ -578,7 +708,7 @@ footer {
     a {
         color: rgba(255, 255, 255, 0.75);
         font-weight: bold;
-       font-family: "Poppins", sans-serif;
+        font-family: "Poppins", sans-serif;
 
         &:hover {
             color: white;
@@ -633,14 +763,14 @@ footer {
 .redes_footer {
     display: flex;
     flex-direction: column;
-    gap: 1.1rem;
+    gap: 1rem;
 }
 
 
 .imgs-redes {
     display: flex;
     justify-content: flex-start;
-    gap: 22px;
+    gap: .5rem;
 
     img {
         height: 34px;
