--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,70 @@ header {
     }
 }
 
+
+.container-servicos{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 8rem;
+
+}
+
+.cards-servicos{
+    width: 1300px;
+  height: 500px;
+  display: flex;
+  overflow: hidden;
+  margin: 5.5rem auto;
+
+
+  .item-servicos{
+     width:500px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 12px;
+    transition:
+      flex 0.6s cubic-bezier(.25, .46, .45, 1.4),
+      filter .3s ease;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform .7s cubic-bezier(.25, .46, .45, 1.4);
+    }
+
+    p {
+      position: absolute;
+      bottom: 25px;
+      left: 25px;
+      font-size:1.3rem;
+      font-weight: bold;
+    }
+  }
+  }
+
+
+  .cards-servicos:hover .item-servicos {
+  flex: 0.8;
+  filter: brightness(0.4);
+}
+
+/* --- HOVER NO ITEM --- */
+.cards-servicos .item-servicos:hover {
+  flex: 2;
+  filter: brightness(.81);  
+}
+
+.cards-servicos .item-servicos:hover img {
+  transform: scale(1);
+}
+
+
+
+
+
 .brake-frases {
     display: flex;
     align-items: center;
@@ -468,20 +532,22 @@ header {
 .mockup-laptop {
     display: flex;
     flex-direction: column;
-
+    margin-top: 1.9rem;
 
     .img-laptop {
         object-fit: cover;
         width: 36rem;
         z-index: 10;
         position: relative;
-        left: 3.5rem;
+        left: 3.2rem;
         top: 8rem;
+        opacity: 0;
     }
 
     .img-pilar {
         width: 43rem;
-        height: 14.3rem
+        height: 14.3rem;
+        opacity: 0;
             /* object-fit: contain; */
     }
 }
